<resources>
    <string name="app_name">Shmistabamm</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_register">Регистрация</string>
    <string name="main">Главная</string>
    <string name="enter_name">Введите имя</string>
    <string name="enter_email">Ваш email</string>
    <string name="enter_phone">Ваш номер телефона</string>
    <string name="title_activity_tabs">TabsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="fab_custom"> com.example.v4n0v.instatest.custom.FABCustomBehavior</string>
    <string name="favorites">Избранное</string>
    <string name="feed">Лента</string>


    <string name="instagram_id">3228490d13164566b76d7c0bfe02118d</string>
    <string name="instagram_secret">2b40e105b5cb489194358cec23ba842e</string>
    <string name="APP_ID">449…</string>
    <string name="callbackurl">https://vk.com/v4n0v</string>
    <string name="swipe_up">Развернуть</string>
    <string name="tap_on_me">Жми меня</string>
    <string name="dark_theme">Темая тема</string>
    <string name="light">Светлая</string>
    <string name="dark">Темная</string>
    <string name="select_theme">Выбирите тему</string>

    <string name="permissons_required">Необходим доступ</string>
    <string name="permissions_required_message">Пожалуйста, предоставьте необходимые разрешения</string>

</resources>
