<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:foo="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp">

    <com.example.v4n0v.instatest.custom.TextViewPlus
        foo:customFont="roboto.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_theme"

        android:gravity="center"/>

    <Switch
        android:id="@+id/switch_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dark_theme"
        android:textOff="@string/light"
        android:textOn="@string/dark" />


</LinearLayout>
