<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:padding="@dimen/std_margin">


    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/action_register"
       style="@style/Header"
        android:layout_alignParentTop="true"/>


    <!--<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"-->

        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
        <!--xmlns:tools="http://schemas.android.com/tools"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--tools:context="com.example.v4n0v.geandroid.MainActivity">-->
        <!--&lt;!&ndash;вызывается из меню (menu_main)&ndash;&gt;-->
        <!--<include layout="@layout/toolbar_layout" />-->

    <!--</android.support.design.widget.CoordinatorLayout>-->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/registerTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:counterOverflowTextAppearance="@style/CounterStyle"

        app:hintTextAppearance="@style/EditTextHintStyle">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:theme="@style/EditTextStyle" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/phoneTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerTextInputLayout"
        app:counterEnabled="true"
        app:counterMaxLength="11"
        app:counterOverflowTextAppearance="@style/CounterStyle"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/AlertDialog.AppCompat"
        app:hintTextAppearance="@style/EditTextHintStyle">


        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone"
            android:inputType="phone"
            android:theme="@style/EditTextStyle" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/mailTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneTextInputLayout"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        app:counterOverflowTextAppearance="@style/CounterStyle"
        app:hintTextAppearance="@style/EditTextHintStyle">

        <EditText
            android:id="@+id/editTextMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:theme="@style/EditTextStyle" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/accept_reg_button"
        style="@style/BlackButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:onClick="confirmRegistration"
        android:text="@string/action_register"
        app:layout_constraintBottom_toBottomOf="parent" />

</RelativeLayout>
